--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
 theme: jekyll-theme-minimal
 ---
-title: Homepage
-menus:
-  header:
-    title: Home
-    weight: 1
+- title: Home
+- title: Supervised Learning
 ---
 
