--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ twitter: http://www.twitter.com/
 linkedin: https://www.linkedin.com/in/aracelimedina/
 email: araceli.mepi@gmail.com
 
-#disqus: araceli-medina
+disqus: araceli-medina
 
 ##Make sure to edit the above fields, especially for disqus.
 
