--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: AI and ML study guide
 email: araceli.mepi@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  A simple, whitespace, helvetica based portfolio theme.
+  My space
 baseurl:  # the subpath of your site, e.g. /blog/
 url:  # the base hostname & protocol for your site
 twitter_username: AraceliMepi
