--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ paginate_path: "/blog/page:num/"
 collections:
   portfolio:
     output: true
-    permalink: /portfolio/:path/
+    permalink: /projects/:path/
   poetry:
     output: true
     permalink: /ML/:path/
