--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: AI and ML study guide
+title: AI&ML
 email: araceli.mepi@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   My space
